--- a/comps/css/index.css
+++ b/comps/css/index.css
@@ -13,7 +13,7 @@ body {
 		position: relative;
 		top: 0;
 		width: 100%;
-		padding: 6px 0px 0px 20px;
+		padding: 6px 0 0 20px;
 		color: white;
 		z-index: 99;
 	}
@@ -27,7 +27,7 @@ body {
 	.nav-path {
 		min-width: 55px;
 		padding: 2px 6px;
-		margin: 0 2px;
+		margin: 0 4px;
 		border-radius: 5px 5px 0 0;
 		text-align: center;
 		cursor: pointer;
@@ -48,6 +48,9 @@ body {
 		font-size: 12px;
 	}
 	@media only screen and (min-width: 0px) and (max-width: 575px) {
+		#app-nav {
+			padding: 6px 0 0 0;
+		}
 		#nav-text {
 			width: 100%;
 			font-size: 20px;
