--- a/comps/css/index.css
+++ b/comps/css/index.css
@@ -1,5 +1,11 @@
+@font-face {
+	font-family: 'Dosis';
+	src: url('../assets/fonts/Dosis-Regular.ttf');
+}
+
 body {
 	background-color: #ebeff2;
+	font-family: 'Dosis', sans-serif;
 }
 
 /* Vue.js */
@@ -71,9 +77,8 @@ body {
 
 /* Notification */
 	.app-notif-title {
-		font-size: 16px;
+		font-size: 20px;
 		margin-left: 16px;
-		font-weight: 500;
 		color: #2b384a;
 	}
 	.app-notif-content {
@@ -115,6 +120,5 @@ body {
 	.notification-subject {
 		padding-top: 5px;
 		color: #2b384a;
-    	font-size: 15px;
-		font-weight: 500;
+		font-size: 16px;
 	}
