--- a/comps/css/index.css
+++ b/comps/css/index.css
@@ -23,9 +23,10 @@ body {
 		color: white;
 		z-index: 99;
 	}
-	#nav-text {
+	.nav-text {
 		margin-top: 7px;
 		font-size: 18px;
+		text-transform: capitalize;
 	}
 	#nav-paths {
 		justify-content: flex-end;
@@ -60,7 +61,7 @@ body {
 		#app-nav {
 			padding: 6px 0 0 0;
 		}
-		#nav-text {
+		.nav-text {
 			width: 100%;
 			font-size: 20px;
 			margin-bottom: 10px;
