--- a/comps/css/index.css
+++ b/comps/css/index.css
@@ -79,53 +79,89 @@ body {
 		padding: 10px 25px;
 	}
 
-/* Notification */
-	.app-notif-title {
-		font-size: 20px;
-		margin-left: 16px;
-		color: #2b384a;
-	}
-	.app-notif-content {
-		background-color: white;
-		margin-top: 4px;
-		border: 1px solid #cacaca;
-		border-radius: 7px;
-		box-shadow: 0 0 2px #6cb1c8;
-	}
-	.notification {
-		padding: 2px 0;
-		border-bottom: 1px solid rgb(231, 231, 231);
-	}
-	.notification:first-child {
-		padding-top: 5px;
-	}
-	.notification:last-child {
-		border-bottom: none;
-		padding-bottom: 5px;
-	}
-	.notification:hover {
-		background-color: #e2e2e2;
-	}
-	.notification-icon {
-		background-color: white;
-		height: 30px;
-		margin: 2px 0 2px 10px;
-		padding: 0 5px 2px 5px;
-		border: 2px solid #b4dae6;
-		border-radius: 20px;
-		text-align: center;
-	}
-	.notification-icon svg {
-		margin-top: -2px;
-		height: 16px;
-		width: 16px;
-		color: #3b4b61;
-	}
-	.notification-subject {
-		padding-top: 5px;
-		color: #2b384a;
-		font-size: 16px;
-	}
-	.notification-subject-target {
-		font-weight: bold;
-	}
+/* Index */
+	/* Notification */
+		.app-notif-title {
+			font-size: 20px;
+			margin-left: 16px;
+			color: #2b384a;
+		}
+		.app-notif-content {
+			background-color: white;
+			margin-top: 4px;
+			border: 1px solid #cacaca;
+			border-radius: 7px;
+			box-shadow: 0 0 2px #6cb1c8;
+		}
+		.notification {
+			padding: 2px 0;
+			border-bottom: 1px solid rgb(231, 231, 231);
+		}
+		.notification:first-child {
+			padding-top: 5px;
+		}
+		.notification:last-child {
+			border-bottom: none;
+			padding-bottom: 5px;
+		}
+		.notification:hover {
+			background-color: #e2e2e2;
+		}
+		.notification-icon {
+			background-color: white;
+			height: 30px;
+			margin: 2px 0 2px 10px;
+			padding: 0 5px 2px 5px;
+			border: 2px solid #b4dae6;
+			border-radius: 20px;
+			text-align: center;
+		}
+		.notification-icon svg {
+			margin-top: -2px;
+			height: 16px;
+			width: 16px;
+			color: #3b4b61;
+		}
+		.notification-subject {
+			padding-top: 5px;
+			color: #2b384a;
+			font-size: 16px;
+		}
+		.notification-subject-target {
+			font-weight: bold;
+		}
+
+/* Expenses */
+	/* Chart */
+		#expenses-chart-container {
+			height: 500px;
+			width: 80%;
+			margin: auto;
+		}
+		#expenses-chart-content {
+			background-color: white;
+			padding: 12px;
+			margin-top: 40px;
+			border: 1px solid #cacaca;
+			border-radius: 7px;
+			box-shadow: 0 0 2px #6cb1c8;
+		}
+		@media only screen and (min-width: 576px) and (max-width: 899px) {
+			#expenses-chart-container {
+				width: 90%;
+			}
+			#expenses-chart-content {
+				margin-top: 30px;
+				border: 1px solid #2b384a;
+			}
+		}
+		@media only screen and (min-width: 0px) and (max-width: 575px) {
+			#expenses-chart-container {
+				width: 100%;
+				height: 400px;
+			}
+			#expenses-chart-content {
+				margin-top: 10px;
+				border: 1px solid #2b384a;
+			}
+		}
